testsuite/tests/properties/invalid_external/invalid_memoized.lkt
import common

class Example: FooNode {
    @export @external @memoized fun p(): Bool
}
